--- a/main.tex
+++ b/main.tex
@@ -460,6 +460,8 @@ Forms will be dealt with in a similar way. Let $\omega$ be a covector and $dP$ b
 
 Putting everything together now, for vector dP and k-form $\omega$, $\omega(dP) = \omega_ie^i(dx^je_j) = \omega_i(dx^j)(e^i)e_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: a vector and covector together naturally simplify down to a linear combination of infinitesimal segments. 
 
+We note now that we cannot always decompose k-forms into constituent 1-forms, but we can always attach a k-form to a wedge series of basis covectors. So, for any k-form $\omega_k$, we can write \begin{gather} \omega_k = \omega_{ab...c}e^a\wedge e^b \wedge ... \wedge e^c. \end{gather} And furthermore, we can always combine k-forms. So, if we have 1-forms $\alpha = \alpha_i e^i$ and $\beta = \beta_j e^j$, we can construct a 2-form as $\alpha_i\beta_j e^i\wedge e^j$. Simply put, k-forms are always combinable, but not always factoriazable.\footnote{This is similar to (and in fact, the math is exactly the same, involving the tensor product) the fact that in quantum mechanics, states may always be combined, but not all mixed states can be factored into constituent pure states}
+
 Working in a space with specified coordinates allows us to solve real problems. For instance, in section 2.2 we got slightly ahead of ourselves by describing the oscillation of a mass on a spring with specific coordinates without yet having them defined. Now, with the tools in this section, such a problem is possible to solve.  
 
 
@@ -511,19 +513,21 @@ From a mathematical perspective, this is entirely valid, and does not detract fr
 \section{Exterior Derivative and Stokes' Theorem}
 
 
-Recall the fluid flux example in section 1.3. We had a 3-surface $\tau$ placed in a fluid, and the net flow of fluid through tau was given by $\Phi(\partial\tau) = \eth\Phi(\tau)$ for flux 2-functional $\Phi$. Suppose now that $\Phi$ has an associated 2-form $B$. We can define a similar construction on forms. So, we have that \begin{gather} \eth\Phi(\tau) = \int_\tau \eth B(d\tau) \end{gather}
+Recall the fluid flux example in section 1.3. We had a 3-surface $\tau$ placed in a fluid, and the net flow of fluid through tau was given by $\Phi(\partial\tau) = \eth\Phi(\tau)$ for flux 2-functional $\Phi$. Suppose now that $\Phi$ has an associated 2-form $B$. We can define a similar construction on forms. So, we have that \begin{gather} \eth\Phi(\tau) = \Phi(\partial\tau) = \int_{\partial\tau} B(d\partial\tau) \end{gather}
 
-In this way, we define the \textbf{exterior derivative $\eth$ on forms} as the tool which which we apply a k-form to the infinitesimal bits of the boundary of a (k+1)-surface. 
+Explicitly, we have that the 2-form $B$ is acting on the infinitesimal components of the boundary of 3-surface $\tau$. We can equate this with a 3-form $C$ acting on the entirety of $\tau$: \begin{gather} \int_{\partial\tau} B(d\partial\tau) = \int_\tau C(d\tau) \end{gather}
 
-
+We can relate $B$ and $C$ by defining the \textbf{exterior derivative $\eth$ on forms}, such that $C = \eth B$. Thus, \begin{gather} \int_{\partial\tau} B(d\partial\tau) = \int_\tau \eth B(d\tau). \end{gather}
 
 
 \begin{defn}
-	$\eth : \Omega_k \to \Omega_{k+1}$ is the \textbf{exterior derivative}\footnote{In most texts on the subject (cf. Curtis and Miller, "Differential Manifolds and Theoretical Physics"), the exterior derivative is denoted simply with a $d$} on k-forms, such that for k-surface $\sigma$ and (k-1)-functional $f$ with associated (k-1)-form $\omega$, 
+	Let $\sigma$ be a k-surface, and let $f$ be a (k-1)-functional with associated (k-1)-form $\omega$. We define the \textbf{exterior derivative}\footnote{In most texts on the subject (cf. Curtis and Miller, "Differential Manifolds and Theoretical Physics") $\eth : \Omega_k \to \Omega_{k+1}$ , the exterior derivative is denoted simply with a $d$} as the tool that allows $\omega$ to act on the boundary of $\sigma$, such that if
 	
-	\begin{gather}f(\sigma) = \int_{\sigma}\omega(d\sigma)\end{gather} and \begin{gather} \eth f(\sigma) = f(\partial\sigma) \end{gather}
-	
-	\begin{gather}\implies \eth f(\sigma) = \int_{\sigma} \eth\omega(d\sigma).\end{gather} 
+	\begin{gather}f(\sigma) = \int_{\sigma}\omega(d\sigma)\end{gather} and \begin{gather} \eth f(\sigma) = f(\partial\sigma), \end{gather}
+	then
+	\begin{gather} \eth f(\sigma) = \int_{\sigma} \eth\omega(d\sigma),\end{gather} 
+	and
+	\begin{gather} \int_\sigma \eth\omega(d\sigma) = \int_{\partial\sigma} \omega(d\partial\sigma)\end{gather}
 \end{defn}
 
 
@@ -561,10 +565,9 @@ squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size
 
 In many treatments of Electromagnetism (for example, "Classical Electromagnetic Radiation" by Heald and Marion), Stokes' Theorem is given in terms of the curl as \begin{gather}\int_S \nabla \times \vec{A} \cdot d\vec{S} = \oint_{\Gamma} \vec{A} \cdot d\vec{l}.\end{gather} This allows us to take a brief digression to see how the tools we have defined look in the more familiar 3D cases. 
 
+We want to examine now how the exterior derivative explicity affects k-forms when written out in component form. In general, we have that for $\omega_k \in \Omega_k$, \begin{gather}\omega_k = \omega_{ab...c}e^a\wedge e^b \wedge ... \wedge e^c.\end{gather} It must be that an integral over the exterior derivative of a form results in one of the degrees of freedom being integrated away, putting the integral strictly on the boundary of the k-surface. [\textbf{Maybe show for 1D or 2D, since the general case is hard}]\begin{gather} \eth \omega_k = \partial_a\omega_{bc...d}e^a\wedge e^b\wedge e^c\wedge ... \wedge e^d.\end{gather} So, suppose we have $f \in \Omega_0$, $v \in \Omega_1$, and $B \in \Omega_2$, and we apply the exterior derivative to each of them. We have that \begin{gather}\eth f = \partial_a f e^a,\end{gather} \begin{gather}\eth v = \partial_a v_b e^a \wedge e^b,\end{gather} and \begin{gather}\eth B = \partial_a B_{bc} e^a\wedge e^b \wedge e^c.\end{gather} 
 
-In general, we have that for $\omega_k \in \Omega_k$, \begin{gather}\omega_k = \omega_{ab...c}e^a\wedge e^b \wedge ... \wedge e^c,\end{gather} and \begin{gather} \eth \omega_k = \partial_a\omega_{bc...d}e^a\wedge e^b\wedge e^c\wedge ... \wedge e^d.\end{gather} So, suppose we have $f \in \Omega_0$, $v \in \Omega_1$, and $B \in \Omega_2$, and we apply the exterior derivative to each of them. We have that \begin{gather}\eth f = \partial_a f e^a,\end{gather} \begin{gather}\eth v = \partial_a v_b e^a \wedge e^b,\end{gather} and \begin{gather}\eth B = \partial_a B_{bc} e^a\wedge e^b \wedge e^c.\end{gather} 
-
-By looking closer at these expressions, we see familiar tools from vector calculus arise. $\partial_a f e^a$ is a 1-form consisting of the sum of derivatives in each of the basis directions. In the 3D case, we have that \begin{gather}\partial_a f e^a = \frac{\partial f}{\partial x^1} e^1 + \frac{\partial f}{\partial x^2} e^2 + \frac{\partial f}{\partial x^3} e^3.\end{gather} This is simply the gradient of a scalar functional. So, we have that in $\mathbb{R}^3$, \begin{gather}\partial_a f e^a = \nabla f.\end{gather} Similarly, we see that in 3D, $\eth v$ will give us a 2-form from a 1-form, composed of the sum of derivatives in the directions perpendicular to the original 1-form. That is, in $\mathbb{R}^3$, \textbf{[Explicitly show the algebra here]}\begin{gather}\eth v = (\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^2\wedge e^3 - (\frac{\partial v_1}{\partial x^3} - \frac{\partial v_3}{\partial x^1})e^1 \wedge e^3 + (\frac{\partial v_1}{\partial x^2} - \frac{\partial v_2}{\partial x^1})e^1 \wedge e^2.\end{gather} Finally, [\textbf{Don't need to show the algebra, just say "similarly we can find that..."}]\begin{gather} \eth B = (\frac{\partial B_1}{\partial x^1} + \frac{\partial B_2}{\partial x^2} + \frac{\partial B_3}{\partial x^3})e^1\wedge e^2 \wedge e^3.\end{gather} We see here that $\eth v$ doesn't \emph{quite} give us $\nabla \times v$, and $\eth B$ doesn't \emph{quite} give us $\nabla \cdot B$. This discrepancy demonstrates the difference between the wedge product and the cross product. Had we done $\nabla \times v$, the first term would have been $(\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^1$. That is, in the direction perpendicular to $e^2\wedge e^3$. This is similarly true for the components in $e^1\wedge e^3$ and $e^1 \wedge e^2$. Furthermore, $\nabla \cdot B$ returns a scalar (i.e., no direction), while $\eth B$ returns a single value in the $e^1 \wedge e^2 \wedge e^3$ "direction." This discrepancy is resolved by the introduction of the Hodge Dual Operator $*$, such that $*\eth v = \nabla \times v$ and $*\eth B = \nabla \cdot B$\footnote{Note however that $\nabla \cdot B$ doesn't even return a true scalar. Rather, it returns a pseudoscalar: $\frac{\rho}{\epsilon_0}$. The difference here is similar to the difference between vector and pseudovector: if you flip one of the coordinates, you get an extra minus sign in a pseudoscalar, but a scalar is left invariant. Pseudovectors are associated with surfaces, and pseudoscalars are associated with volumes (hence, charge \textit{density} $\rho$.)}, but this is beyond us at the moment. What does hold immediately true is a generalization of the expression \begin{gather} \nabla \times \nabla V = 0\end{gather} for any scalar function $V$. For any form $\omega_k \in \Omega_k$, we have that \begin{gather} \eth\eth\omega_k = 0.\end{gather}
+By looking closer at these expressions, we see familiar tools from vector calculus arise. $\partial_a f e^a$ is a 1-form consisting of the sum of derivatives in each of the basis directions. In the 3D case, we have that \begin{gather}\partial_a f e^a = \frac{\partial f}{\partial x^1} e^1 + \frac{\partial f}{\partial x^2} e^2 + \frac{\partial f}{\partial x^3} e^3.\end{gather} This is simply the gradient of a scalar functional. So, we have that in $\mathbb{R}^3$, \begin{gather}\partial_a f e^a = \nabla f.\end{gather} Similarly, we see that in 3D, $\eth v$ will give us a 2-form from a 1-form, composed of the sum of derivatives in the directions perpendicular to the original 1-form. That is, in $\mathbb{R}^3$, \textbf{[Explicitly show the algebra here]}\begin{gather}\eth v = (\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^2\wedge e^3 - (\frac{\partial v_1}{\partial x^3} - \frac{\partial v_3}{\partial x^1})e^1 \wedge e^3 + (\frac{\partial v_1}{\partial x^2} - \frac{\partial v_2}{\partial x^1})e^1 \wedge e^2.\end{gather} Finally, [\textbf{Don't need to show the algebra, just say "similarly we can find that..."}]\begin{gather} \eth B = (\frac{\partial B_1}{\partial x^1} + \frac{\partial B_2}{\partial x^2} + \frac{\partial B_3}{\partial x^3})e^1\wedge e^2 \wedge e^3.\end{gather} We see here that $\eth v$ doesn't \emph{quite} give us $\nabla \times v$, and $\eth B$ doesn't \emph{quite} give us $\nabla \cdot B$. This discrepancy demonstrates the difference between the wedge product and the cross product. Had we done $\nabla \times v$, the first term would have been $(\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^1$. That is, in the direction perpendicular to $e^2\wedge e^3$. This is similarly true for the components in $e^1\wedge e^3$ and $e^1 \wedge e^2$. Furthermore, $\nabla \cdot B$ returns a scalar\footnote{Note however that $\nabla \cdot B$ doesn't even return a true scalar. Rather, it returns a pseudoscalar: $\frac{\rho}{\epsilon_0}$. The difference here is similar to the difference between vector and pseudovector: if you flip one of the coordinates, you get an extra minus sign in a pseudoscalar, but a scalar is left invariant. Pseudovectors are associated with surfaces, and pseudoscalars are associated with volumes (hence, charge \textit{density} $\rho$.)} (i.e., no direction), while $\eth B$ returns a volume in the $e^1 \wedge e^2 \wedge e^3$ "direction." This discrepancy is resolved by the introduction of the Hodge Dual Operator $*$, such that $*\eth v = \nabla \times v$ and $*\eth B = \nabla \cdot B$, but this is beyond us at the moment. What does hold immediately true is a generalization of the expression \begin{gather} \nabla \times \nabla V = 0\end{gather} for any scalar function $V$. For any form $\omega_k \in \Omega_k$, we have that \begin{gather} \eth\eth\omega_k = 0.\end{gather}
 
 
 You may be asking now, "But what about $\nabla \times \nabla \times B$ for $B \in \Omega_1$? This gives us $\nabla (\nabla \cdot B) - \nabla^2 B$, which certainly isn't zero in general. Didn't we show just that curl is really just the exterior derivative of a one-form?" The issue is, once again, that the exterior derivative of a one form isn't \emph{quite} the same thing as a curl of a vector field. This discrepancy arises because of the difference between the wedge product $\wedge$ and the cross product $\times$. For two vectors $a$ and $b$, $a \times b$ gives a vector perpendicular to the two of them, while the wedge product deals only with the two original tangent vectors. 
